[M138] [lensoverlay] Various polish/bug fixes to the new visual selections
Original change's description:
> [lensoverlay] Various polish/bug fixes to the new visual selections
> 
> This CL includes multiple fixes to the new visual selection updates.
> Included all in one CL to make merging easier. This CL includes:
>  - Fix to make it impossible to tab to CSB thumbnail
>  - Fix to make it impossible to backspace the CSB thumbnail
>  - Make thumbnail image not selectable
>  - Add back grey scrim to CSB thumbnail
>  - Fix searchbox box shadow getting clipped by overflow hidden
>  - Force the overlay glow to the bounds of the selection overlay
>  - Hide new suggest ghost loader when error state is showing
>  - Change from clamping to 1 line, to forcing all suggestions to be 48px
>    tall, even if it is a two line suggestion (this is the correct spec)
> 
> Bug: 421469250, 421967041, 422217475
> Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6619086
> Commit-Queue: Duncan Mercer <mercerd@google.com>
> Cr-Commit-Position: refs/heads/main@{#1469491}

Bug: 423042415,421469250,421967041,422217475
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6624527
Commit-Queue: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Cr-Commit-Position: refs/branch-heads/7204@{#735}
Cr-Branched-From: d5de512dc9dc8ddfe4e6d71b0637578bb6158683-refs/heads/main@{#1465706}

--- a/chrome/browser/resources/lens/overlay/overlay_border_glow.css
+++ b/chrome/browser/resources/lens/overlay/overlay_border_glow.css
@@ -9,6 +9,8 @@
 
 :host {
   --gradient-mask-opacity-middle-val: 0;
+  /* Ensure the flow doesn't leave this elements bounds. */
+  overflow: hidden;
 }
 
 @keyframes rotateGradient {
@@ -64,9 +66,6 @@
 #borderGlowContainer {
   animation: 117ms cubic-bezier(0.2, 0, 0, 1) 0ms 1 normal forwards running shaderOpacityIn,
                 1016ms cubic-bezier(0.2, 0, 0, 1) 117ms 1 normal forwards running shaderOpacityToResting;
-  /* height and width must be larger than the diagonal of the viewport,
-  in order to prevent gaps at the corners while rotating. */
-  height: calc(max(100vw, 100vh) * 1.5);
   left: 50%;
   mask-image: radial-gradient(
     rgba(0, 0, 0, 0) 0,
@@ -75,11 +74,10 @@
   );
   mask-mode: alpha;
   opacity: 0;
-  position: fixed;
+  position: absolute;
   top: 50%;
   transform: translate(-50%, -50%) rotate(0deg) scale(0.7);
   transform-origin: center center;
-  width: calc(max(100vw, 100vh) * 1.5);
 }
 
 #gradientColorLayer {
